--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jane Smith, MS</title>
+  <title>Surabhi S Nath, MS</title>
 
   <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -59,7 +59,7 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail" src="http://placehold.it/250x250" alt="Image of Jane Smith">
+        <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Image of Jane Smith">
 
         <p id="title">Doctoral Candidate<br>
           <span id="program">Political Science</span>
