--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Image of Jane Smith">
+        <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Surabhi S Nath">
 
         <p id="title">Doctoral Candidate<br>
           <span id="program">Political Science</span>
