--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <div class="col-sm-4">
         <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Surabhi S Nath">
 
-        <p id="title">Doctoral Candidate<br>
-          <span id="program">Political Science</span>
+        <p id="title">Doctoral Student<br>
+          <span id="program">Max Planck School of Cognition</span>
         </p>
 
         <table class="table" id="contact-table">
@@ -77,11 +77,11 @@
             </tr>
             <tr>
               <td><i class="fas fa-phone"></i></td>
-              <td><a href="tel:9999999999">(999) 999-9999</a></td>
+              <td><a href="tel:919910592923">(91) 9910592923</a></td>
             </tr>
             <tr>
               <td><i class="fas fa-at"></i></td>
-              <td><a href="mailto:jane.smith@example-uni.edu">jane.smith@nd.edu</a></td>
+              <td><a href="mailto:surabhi.s.nath@gmail.com">surabhi.s.nath@gmail.com</a></td>
             </tr>
           </tbody>
         </table>
