--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
               <td>
-                James Trickington University<br>
-                1234 Happiness Dr.<br>
-                Anytown, State 12345
+                93 Vikramshila Apts.<br>
+                IIT Campus, Haus Khas<br>
+                New Delhi 110016<br>
+                India
               </td>
             </tr>
             <tr>
               <td><i class="fas fa-phone"></i></td>
-              <td><a href="tel:919910592923">(91) 9910592923</a></td>
+              <td><a href="tel:919910592923">(+91) 9910592923</a></td>
             </tr>
             <tr>
               <td><i class="fas fa-at"></i></td>
