--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Surabhi S Nath">
 
         <p id="title">Doctoral Student<br>
-          <span id="program">Max Planck School of Cognition</span>
+          <span id="program">Computer Science</span>
         </p>
 
         <table class="table" id="contact-table">
@@ -115,6 +115,7 @@
         <h3 class="push-down-3"><span>Education</span></h3>
 
         <ul id="education">
+          <!
           <li>
             Ph.D. in {FIELD}, {YEAR}<br>
             <span class="university"><em>University of Southern California</em></span>
@@ -123,9 +124,10 @@
             M.S. in {FIELD}, {YEAR}<br>
             <span class="university"><em>{UNIVERSITY}</em></span>
           </li>
+          >
           <li>
-            B.S. in {FIELD}, {YEAR}<br>
-            <span class="university"><em>{UNIVERSITY}</em></span>
+            B.S. in {Computer Science and Engineering}, {2020}<br>
+            <span class="university"><em>{IIIT Delhi}</em></span>
           </li>
 
         </ul>
