--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h3 class="push-down-3"><span>Education</span></h3>
 
         <ul id="education">
-          <!
+          <!--
           <li>
             Ph.D. in {FIELD}, {YEAR}<br>
             <span class="university"><em>University of Southern California</em></span>
@@ -124,10 +124,10 @@
             M.S. in {FIELD}, {YEAR}<br>
             <span class="university"><em>{UNIVERSITY}</em></span>
           </li>
-          >
+          -->
           <li>
-            B.S. in {Computer Science and Engineering}, {2020}<br>
-            <span class="university"><em>{IIIT Delhi}</em></span>
+            B. Tech. in Computer Science and Engineering, 2020<br>
+            <span class="university"><em>IIIT Delhi</em></span>
           </li>
 
         </ul>
