--- a/vitae.html
+++ b/vitae.html
@@ -60,11 +60,11 @@
       <div class="row">
          <div class="col-sm-12">
 
-           <h1>Vitae</h1>
+           <h1>Curriculum Vitae</h1>
 
-            <p>Find my curriculum vitae, below. References available upon request.</p>
+            <p>Find my curriculum vitae, below</p>
 
-            <p class='text-right'><a href='https://docs.google.com/document/d/1_AJVKpKeyh_NFvlKA6nOT7GbR8NuFfJjQn-5tIumWpY/edit' target='_blank'><i class='fas fa-print fa-fw' aria-hidden='true'></i>&nbsp;Print Vitae</a></p><iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src='https://docs.google.com/document/d/1_AJVKpKeyh_NFvlKA6nOT7GbR8NuFfJjQn-5tIumWpY/preview' allowfullscreen></iframe>
+            <iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src='https://drive.google.com/file/d/1vM1SkgCmtZ4Nh3gv37dSlNaRnRXvEn5k/view?usp=sharing' allowfullscreen></iframe>
 
          </div>
       </div>
