--- a/vitae.html
+++ b/vitae.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Jane Smith, MS</title>
+   <title>Surabhi S Nath, MS</title>
 
    <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
    <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -64,7 +64,7 @@
 
             <p>Find my curriculum vitae, below</p>
 
-            <iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src='https://drive.google.com/file/d/1vM1SkgCmtZ4Nh3gv37dSlNaRnRXvEn5k/view?usp=sharing' allowfullscreen></iframe>
+            <iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src='https://drive.google.com/file/d/1vM1SkgCmtZ4Nh3gv37dSlNaRnRXvEn5k/view' allowfullscreen></iframe>
 
          </div>
       </div>
