--- a/vitae.html
+++ b/vitae.html
@@ -62,7 +62,7 @@
 
            <h1>Curriculum Vitae</h1>
 
-            <p>Find my curriculum vitae, below</p>
+            <p>Find my curriculum vitae below</p>
 
             <iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src='https://drive.google.com/file/d/1vM1SkgCmtZ4Nh3gv37dSlNaRnRXvEn5k/view' allowfullscreen></iframe>
 
