--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
       </div>
       <div class="col-sm-8">
 
-        <p>I am an {JOB TITLE} in the {SCHOOL|DEPARTMENT} at {UNIVERSITY|INSTITUTE|COMPANY} where I
-          {1st AREA OF RESPONSIBILITY}, {2nd AREA OF RESPONSIBILITY}, and {3rd AREA OF RESPONSIBILITY}. My research and teaching focus on {1st AREA}, {2nd AREA}, {3rd AREA} and {4th AREA}.</p>
+        <p>I graduated from IIIT Delhi with a B. Tech. (Hons) in Computer Science and Engineering and a minor area in Computational Biology, in July 2020. I will now be joining the Max Planck School of Cognition for my doctoral studies.</p>
 
         <p>I received my {DEGREE} in {ACADEMIC FIELD} from {NAME OF UNIVERSITY} in {YEAR}. I
           studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE RELEVANT MAJOR PROJECTS IN LATEST GRADUATE DEGREE}.</p>
