--- a/footer.html
+++ b/footer.html
@@ -12,6 +12,7 @@
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
           <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+          <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
           <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
           <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
         </ul>
