--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
         <!-- If you don't want a 'read more' section, simple delete the entire span class below -->
-        <span class="badge" id="badge-more">more</span>
+        <!-- <span class="badge" id="badge-more">more</span> -->
 
 
         <h3 class="push-down-3"><span>Education</span></h3>
