--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
       </div>
       <div class="col-sm-8">
 
-        <p>I graduated from IIIT Delhi with a B. Tech. (Hons) in Computer Science and Engineering and a minor area in Computational Biology, in July 2020. I will now be joining the Max Planck School of Cognition for my doctoral studies.</p>
+        <p>In July 2020, I graduated from IIIT Delhi with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the Max Planck School of Cognition, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the Berlin School of Mind and Brain.</p>
 
-        <p>I . I
-          studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE RELEVANT MAJOR PROJECTS IN LATEST GRADUATE DEGREE}.</p>
+        <p>I aim to study Decision Making  </p>
 
         <p>I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
+        
+        <p> Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. In my school days, I used to actively participate in athletics! Recently, I have enjoyed trying out some voice acting.
 
         <div id="read-more">
 
