--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="col-sm-8">
 
-        <p>In July 2020, I graduated from IIIT Delhi with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the Max Planck School of Cognition, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the Berlin School of Mind and Brain.</p>
+        <p>In July 2020, I graduated from <a href="https://www.iiitd.ac.in/">IIIT Delhi</a> with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the <a href="https://www.maxplanckschools.de/en/cognition">Max Planck School of Cognition</a>, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the <a href="http://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>.</p>
 
         <p>I aim to study Decision Making  </p>
 
