--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
       </div>
       <div class="col-sm-8">
 
-        <p>In July 2020, I graduated from <a href="https://www.iiitd.ac.in/">IIIT Delhi</a> with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the <a href="https://www.maxplanckschools.de/en/cognition">Max Planck School of Cognition</a>, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the <a href="http://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>.</p>
+        <p align="justify">In July 2020, I graduated from <a href="https://www.iiitd.ac.in/">IIIT Delhi</a> with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the <a href="https://www.maxplanckschools.de/en/cognition">Max Planck School of Cognition</a>, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the <a href="http://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>.</p>
 
-        <p>I aim to study Decision Making  </p>
+        <p align="justify">I aim to study Decision Making  </p>
 
-        <p>I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
+        <p align="justify">I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
         
-        <p> Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. In my school days, I used to actively participate in athletics! Recently, I have enjoyed trying out some voice acting.
+        <p align="justify"> Apart from my research interests, I have learnt Hindustani Classical music for over 10 years and love singing. I also hold National scholarship for Kuchipudi dance. In my school days, I used to actively participate in athletics! Recently, I have enjoyed trying out some voice acting.
 
         <div id="read-more">
 
