--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="col-sm-8">
 
-        <p align="justify">In July 2020, I graduated from <a href="https://www.iiitd.ac.in/">IIIT Delhi</a> with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the <a href="https://www.maxplanckschools.de/en/cognition">Max Planck School of Cognition</a>, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the <a href="http://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>. I am very enthusiastic to use statistical modelling, deep learning and reinforcement learning to understand cognition.</p>
+        <p align="justify">In July 2020, I graduated from <a href="https://www.iiitd.ac.in/">IIIT Delhi</a> with a B. Tech. (Hons) in Computer Science & Engineering and a minor area in Computational Biology. I will now be joining the <a href="https://www.maxplanckschools.de/en/cognition">Max Planck School of Cognition</a>, Germany for my doctoral studies in September 2020. For my Masters, I will be enrolling into the <a href="http://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>. I am very enthusiastic to use statistical modelling, deep learning and reinforcement learning to understand human cognitive phenomenon such as affect, decision making, improvisation and music perception.</p>
 
         <p align="justify">For my Masters thesis, I aim to study the role of emotions in decision making and hope to explore the topic in depth through theory, experimental and computational work.</p>
 
