--- a/research.html
+++ b/research.html
@@ -75,8 +75,8 @@
 
       <div class="row">
          <div class="col-sm-12">
-            <h1>Projects</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quas fugiat repellendus ex adipisci! Consectetur dolorem facere perferendis placeat repellat aspernatur odio, explicabo, ab quaerat non saepe reprehenderit tempore, architecto neque eum quis culpa vel numquam voluptas dolores. Cumque similique vel culpa alias vero optio iusto, nisi deserunt officiis, perferendis, magni illum ad iure commodi magnam labore soluta atque. Exercitationem esse provident dolorum non vero incidunt nisi cum est dolorem quis accusamus, nemo autem vel labore adipisci voluptatum, repudiandae maxime at ratione ab dolore quam ducimus. Cupiditate.</p>
+            <h1>Research</h1>
+            <p>Below are some of my research projects. Feel free to reach out to me if any of these appeal to you or you have any questions.</p>
 
          </div>
 
