--- a/research.html
+++ b/research.html
@@ -87,11 +87,11 @@
         <div class="col-sm-6 col-md-4">
            <div class="panel panel-default">
               <div class="panel-heading">
-                 <h5 class="panel-title">Project 1</h5>
+                 <h5 class="panel-title">LeVAsa</h5>
               </div>
-              <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
+              <div class="panel-footer">Latent encodings for Valence-Arousal structure alignment</div>
+              <div class="panel-body"><img src="img/LeVAsa" class="img img-responsive img-thumbnail">
               </div>
-              <div class="panel-footer">Lorem ipsum dolor.</div>
            </div>
         </div>
 
