--- a/research.html
+++ b/research.html
@@ -86,10 +86,10 @@
 
         <div class="col-sm-6 col-md-4">
            <div class="panel panel-default">
-              <div class="panel-heading">
+              <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
-              </div>
-              <div class="panel-footer">Latent encodings for Valence-Arousal structure alignment</div>
+              </div> -->
+              <div class="panel-title">Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa" class="img img-responsive img-thumbnail">
               </div>
            </div>
@@ -97,12 +97,12 @@
 
         <div class="col-sm-6 col-md-4">
             <div class="panel panel-default">
-               <div class="panel-heading">
+               <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 2</h5>
-               </div>
+               </div> -->
+               <div class="panel-title">Data sonification for sensitizing youth on crime against women in India</div>
                <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
                </div>
-               <div class="panel-footer">Lorem ipsum dolor.</div>
             </div>
          </div>
 
