--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
-              <div class="panel-title">Latent encodings for Valence-Arousal structure alignment</div>
+              <div class="panel-title" align="justify">Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa" class="img img-responsive img-thumbnail">
               </div>
            </div>
@@ -100,8 +100,8 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 2</h5>
                </div> -->
-               <div class="panel-title">Data sonification for sensitizing youth on crime against women in India</div>
-               <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
+               <div class="panel-title" align="center">Data sonification for sensitizing youth on crime against women in India</div>
+               <div class="panel-body"><img src="img/datasonification.jpg" class="img img-responsive img-thumbnail">
                </div>
             </div>
          </div>
