--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
-              <div class="panel-title" align="center">Latent encodings for Valence-Arousal structure alignment</div>
+              <div class="panel-title" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
               </div>
            </div>
