--- a/research.html
+++ b/research.html
@@ -111,7 +111,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 3</h5>
                </div> -->
-               <div class="panel-title">RL method for decision making impairement in daily life of people in their natural enivironment</div>
+               <div class="panel-title" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
@@ -120,12 +120,13 @@
 
          <div class="col-sm-6 col-md-4">
             <div class="panel panel-default">
-               <div class="panel-heading">
+               <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
+               </div> -->
+               <div class="panel-title", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
+               <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
                </div>
-               <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
-               </div>
-               <div class="panel-footer">Lorem ipsum dolor.</div>
+               
             </div>
          </div>
 
