--- a/research.html
+++ b/research.html
@@ -132,12 +132,13 @@
 
          <div class="col-sm-6 col-md-4">
             <div class="panel panel-default">
-               <div class="panel-heading">
+               <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 5</h5>
+               </div> -->
+               <div class="panel-footer">Emoyive stimuli-trigerred participant-based clustering</div>
+               <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
                </div>
-               <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
-               </div>
-               <div class="panel-footer">Lorem ipsum dolor.</div>
+               
             </div>
          </div>
 
