--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
-              <div class="panel-title" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
+              <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
               </div>
            </div>
@@ -100,7 +100,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 2</h5>
                </div> -->
-               <div class="panel-title" align="center">Data sonification for sensitizing youth on crime against women in India</div>
+               <div class="panel-footer" align="center">Data sonification for sensitizing youth on crime against women in India</div>
                <div class="panel-body"><img src="img/datasonification.jpg" class="img img-responsive img-thumbnail">
                </div>
             </div>
@@ -111,7 +111,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 3</h5>
                </div> -->
-               <div class="panel-title" align="center">RL method for decision making impairement in daily life of people</div>
+               <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
@@ -123,7 +123,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
                </div> -->
-               <div class="panel-title", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
+               <div class="panel-footer", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
                </div>
                
@@ -135,7 +135,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 5</h5>
                </div> -->
-               <div class="panel-footer">Emoyive stimuli-trigerred participant-based clustering</div>
+               <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering</div>
                <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
                </div>
                
