--- a/research.html
+++ b/research.html
@@ -144,12 +144,14 @@
 
          <div class="col-sm-6 col-md-4">
             <div class="panel panel-default">
+               <!--
                <div class="panel-heading">
                   <h5 class="panel-title">Project 6</h5>
+               </div> -->
+               <div class="panel-footer">Breast cancer detection in mammograms using deep neural networks</div>
+               <div class="panel-body"><img src="img/bcd.png" class="img img-responsive img-thumbnail">
                </div>
-               <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
-               </div>
-               <div class="panel-footer">Lorem ipsum dolor.</div>
+               
             </div>
          </div>
 
