--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,8 @@
     <div class="row">
       <div class="col-sm-6 text-muted">
 
-        <p>&copy; 2019 Jane Smith</p>
+        <p>Last updated: August 2020</p>
+        <p>Template borrowed from <a href="https://github.com/randal-sean-harrison/academic-website-template">here</a>
 
       </div>
       <div class="col-sm-6">
