--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
       <div class="col-sm-6 text-muted">
 
         <p>Last updated: August 2020</p>
-        <p>Template borrowed from <a href="https://github.com/randal-sean-harrison/academic-website-template">here</a>
+        <p><h6>Template borrowed from <a href="https://github.com/randal-sean-harrison/academic-website-template">here</h6></a>
 
       </div>
       <div class="col-sm-6">
