--- a/research.html
+++ b/research.html
@@ -123,7 +123,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
                </div> -->
-               <div class="panel-footer", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
+               <div class="panel-footer", align="center">Universal EEG encoder<br>for learning diverse<br>intelligent tasks</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
                </div>
                
