--- a/research.html
+++ b/research.html
@@ -135,7 +135,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 5</h5>
                </div> -->
-               <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering</div>
+               <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering on EEG data</div>
                <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
                </div>
                
