--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
       <div class="col-sm-6 text-muted">
 
         <p>Last updated: August 2020</p>
-        <p><h6>Website template borrowed from <a href="https://github.com/randal-sean-harrison/academic-website-template"><h6>here</h6></a></h6>
+        <p><h6>Website template borrowed from</h6> <a href="https://github.com/randal-sean-harrison/academic-website-template"><h6>here</h6></a>
 
       </div>
       <div class="col-sm-6">
