--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
             <h3 class="push-down-4"><span>Select Publications</span></h3>
             -->
             
-            <h3>Published Papers</h3>
+            <h3 class="push-down-4"><span>Published Papers</span></h3>
 
             <ul class="publications">
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
@@ -94,8 +94,8 @@
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
             </ul>
 
-            <h3>Submitted for Publication</h3>
-
+            <h3 class="push-down-4"><span>Submitted for Publication</span></h3>
+            
             <ul class="publications">
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
@@ -103,7 +103,7 @@
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
             </ul>
 
-            <h3>Working Papers</h3>
+            <h3 class="push-down-4"><span>Working Papers</span></h3>
 
             <ul class="publications">
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
