--- a/publications.html
+++ b/publications.html
@@ -90,19 +90,23 @@
             <ul class="publications">
                <li><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE.</li>
                <li><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280).</li>
+               <!--
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               -->
             </ul>
 
             <h3 class="push-down-4"><span>Submitted for Publication</span></h3>
             
             <ul class="publications">
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
+               <li><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>arXiv preprint arXiv:2007.10058</i>.</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <!--
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               -->
             </ul>
 
             <h3 class="push-down-4"><span>Working Papers</span></h3>
