--- a/publications.html
+++ b/publications.html
@@ -102,9 +102,10 @@
             
             <ul class="publications">
                <li><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>arXiv preprint arXiv:2007.10058</i>.</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <li>Jin, H, <b>Nath, S.S</b>, Schneider, S., Wu, S. and Kaplan, C., 2020. A Reinforcement Learning Based Method to Examine Decision-making Impairment in the Daily Life of People in Their Natural Environment and a Case Study in University Students. <i>Journal of Biomedical Informatics</i>.</li>
                <!--
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                -->
             </ul>
