--- a/publications.html
+++ b/publications.html
@@ -113,10 +113,12 @@
             <h3 class="push-down-4"><span>Working Papers</span></h3>
 
             <ul class="publications">
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
+               <li><b>Nath, S.S</b>, Eden, G., Moyers, T.S., Hear her Tear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020</i></li>
+               <!--
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               -->
             </ul>
 
             <!-- Dissertation abstract -->
