--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
             <h3 class="push-down-4"><span>Working Papers</span></h3>
 
             <ul class="publications">
-               <li><b>Nath, S.S</b>, Eden, G., Moyers, T.S., Hear her Tear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020</i></li>
+               <li><b>Nath, S.S</b>, Eden, G., Moyers, T.S., Hear her Tear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020.</i></li>
                <!--
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
@@ -122,7 +122,7 @@
             </ul>
 
             <!-- Dissertation abstract -->
-            <h3 class="push-down-3"><span>Dissertation</span></h3>
+            <h3 class="push-down-3"><span>B. Tech. Thesis</span></h3>
             <p>{BRIEF PARAGRAPH(S) ABSTRACT OF YOUR DISSERTATION}</p>
 
             <!-- Sample quote from the dissertation -->
