--- a/publications.html
+++ b/publications.html
@@ -123,7 +123,8 @@
 
             <!-- Dissertation abstract -->
             <h3 class="push-down-3"><span>B. Tech. Thesis</span></h3>
-            <p>{BRIEF PARAGRAPH(S) ABSTRACT OF YOUR DISSERTATION}</p>
+            <p>Title: Breast Cancer Detection on Mammograms using Deep Neural Networks</p>
+            <p>Advisors: Prof. Chetan Arora, Prof. Subhasis Banerjee, Dr. Krithika Rangarajan</p>
 
             <!-- Sample quote from the dissertation -->
             <blockquote>{SAMPLE/QUOTE FROM YOUR DISSERTATION}
