--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,7 @@
 
             <!-- Read More Button -- link to the dissertation -->
             <p class="text-left">
-               <a id="link-to-docs" role="button" class="btn btn-default" href="#" target="_blank">
+               <a id="link-to-docs" role="button" class="btn btn-default" href="https://www.researchgate.net/publication/337674027_BREAST_CANCER_DETECTION_IN_MAMMOGRAMS_USING_DEEP_NEURAL_NETWORKS" target="_blank">
                   <i class="far fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; Read More
                </a>
             </p>
