--- a/publications.html
+++ b/publications.html
@@ -123,8 +123,8 @@
 
             <!-- Dissertation abstract -->
             <h3 class="push-down-3"><span>B. Tech. Thesis</span></h3>
-            <p><h4><b>Title</b>: Breast Cancer Detection on Mammograms using Deep Neural Networks</h4></p>
-            <p><h5><b>Advisors</b>: Prof. Chetan Arora, Prof. Subhasis Banerjee, Dr. Krithika Rangarajan</h5></p>
+            <p><b>Title</b>: Breast Cancer Detection on Mammograms using Deep Neural Networks</p>
+            <p><b>Advisors</b>: <a href="https://www.cse.iitd.ac.in/~chetan/">Prof. Chetan Arora</a>, <a href="http://www.cse.iitd.ernet.in/~suban/">Prof. Subhasis Banerjee</a>, <a href="https://www.linkedin.com/in/krithika-rangarajan-65586039/">Dr. Krithika Rangarajan</a></p>
 
             <!-- Sample quote from the dissertation -->
             <blockquote>Breast cancer has become the most common form of cancer in Indian, recently having overtaken cervical cancer in urban cities. Immense research has been carried out on breast cancer and several automated machines for detection have been formed, however, they are far from perfection and medical assessments need more reliable services. Also, very little research has been performed on Indian datasets, which are significantly different than the available foreign resources. Indian breasts are more dense and hence differ in texture, lesion size and composition. Our works aims to reproduce the state of the art results reported by researchers using deep learning approaches to automate breast cancer detection and extend them to build deep learning breast cancer detection networks which are more specific to Indian breast types and alongside use metadata of age, breast density, past history and other available information to enable more accurate judgement and treatment. Working in close collaboration with a radiologist from AIIMS Delhi, our work develops alternative object detection frameworks, ensemble and transformer networks to improve and enhance both classification and detection of breast lesions. Various analysis technique have been applied to measure performance and conduct thorough investigation of our experiments.
