--- a/research.html
+++ b/research.html
@@ -176,7 +176,7 @@
                   <h5 class="panel-title">Project 8</h5>
                </div>
                -->
-               <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech application</div>
+               <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech app</div>
                <div class="panel-body"><img src="img/ar.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
