--- a/research.html
+++ b/research.html
@@ -164,7 +164,7 @@
                </div>
                -->
                <div class="panel-footer" align="center">Protein ligand scoring using convolutional neural networks</div>
-               <div class="panel-body"><img src="img/Proteinligand.png" class="img img-responsive img-thumbnail">
+               <div class="panel-body"><img src="img/proteinligand.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
          </div>
@@ -176,7 +176,7 @@
                   <h5 class="panel-title">Project 8</h5>
                </div>
                -->
-               <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech app</div>
+               <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech</div>
                <div class="panel-body"><img src="img/ar.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
@@ -190,7 +190,7 @@
                </div>
                -->
                <div class="panel-footer" align="center">Assessment of terrace gardens as modifiers of building microclimate</div>
-               <div class="panel-body"><img src="img/terracegarden" class="img img-responsive img-thumbnail">
+               <div class="panel-body"><img src="img/terracegarden.png" class="img img-responsive img-thumbnail">
                </div>
                
             </div>
