--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
       <div class="col-sm-6 text-muted">
 
         <p>Last updated: August 2020</p>
-        <p><h6>Website template borrowed from</h6> <a href="https://github.com/randal-sean-harrison/academic-website-template"><h6 style="colour: blue">here</h6></a>
+        <p><h6>Website template borrowed from</h6> <a href="https://github.com/randal-sean-harrison/academic-website-template" target="_blank"><h6><font color="blue">here</font></h6></a>
 
       </div>
       <div class="col-sm-6">
