--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         <p id="title">Incoming Doctoral Student<br>
           <span id="program">Max Planck School of Cognition</span>
         </p>
+        
+        <div class="col-sm-6">
+
+        <!-- Social professional networking icons -->
+        <ul class="social-icons pull-right">
+          <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+          <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
+        </ul>
+
+      </div>
 
         <table class="table" id="contact-table">
           <tbody>
