--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <span id="program">Max Planck School of Cognition</span>
         </p>
         
-        <div class="col-sm-6">
+        <div class="row">
 
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
