--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="row">
 
         <!-- Social professional networking icons -->
-        <ul class="social-icons pull-right">
+        <ul class="social-icons pull-left">
+          <li><a href="mailto:surabhi.s.nath@gmail.com" target="_blank"><i class="fab fa-envelope fa-2x"></i></a></li>
           <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
           <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
           <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
