--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
   <!-- Local styles -->
   <link rel="stylesheet" href="css/main.css">
+  
+  <style>
+    ul {
+    list-style: none;
+    padding-left: 0;
+    }
+  </style>
 
 </head>
 
