--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     ul {
     list-style: none;
     padding-left: 0;
-    line-width:50%
+    line-width:50%;
+    padding:7px;
     }
   </style>
 
