--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
               <td>
-                93 Vikramshila Apts.<br>
-                IIT Campus, Haus Khas<br>
-                New Delhi 110016<br>
-                India
+                New Delhi, India
               </td>
             </tr>
             <tr>
