--- a/publications.html
+++ b/publications.html
@@ -88,8 +88,8 @@
             <h3 class="push-down-4"><span>Published Papers</span></h3>
 
             <ul class="publications">
-               <li><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE. <h6><a href="">PDF</a></h6> </li>
-               <li><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280).</li>
+               <li align="justify"><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE. (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8919317">PDF</a>)</li>
+               <li align="justify"><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280). (<a href="https://dl.acm.org/doi/pdf/10.1145/3297001.3297040">PDF</a>)</li>
                <!--
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
@@ -101,8 +101,8 @@
             <h3 class="push-down-4"><span>Submitted for Publication</span></h3>
             
             <ul class="publications">
-               <li><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>arXiv preprint arXiv:2007.10058</i>.</li>
-               <li>Jin, H, <b>Nath, S.S</b>, Schneider, S., Wu, S. and Kaplan, C., 2020. A Reinforcement Learning Based Method to Examine Decision-making Impairment in the Daily Life of People in Their Natural Environment and a Case Study in University Students. <i>Journal of Biomedical Informatics</i>.</li>
+               <li align="justify"><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>arXiv preprint arXiv:2007.10058</i>. (<a href="https://arxiv.org/pdf/2007.10058.pdf">PDF</a>)</li>
+               <li align="justify">Jin, H, <b>Nath, S.S</b>, Schneider, S., Wu, S. and Kaplan, C., 2020. A Reinforcement Learning Based Method to Examine Decision-making Impairment in the Daily Life of People in Their Natural Environment and a Case Study in University Students. <i>Journal of Biomedical Informatics</i>.</li>
                <!--
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
@@ -113,7 +113,7 @@
             <h3 class="push-down-4"><span>Working Papers</span></h3>
 
             <ul class="publications">
-               <li><b>Nath, S.S</b>, Eden, G., Moyers, T.S., Hear her Tear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020.</i></li>
+               <li align="justify"><b>Nath, S.S</b>, Eden, G., Moyers, T.S., Hear her Tear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020.</i></li>
                <!--
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
