--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
               </td>
             </tr>
             <tr>
-              <td><i class="fas fa-phone"></i></td>
-              <td><a href="tel:919910592923">(+91) 9910592923</a></td>
+              <td><i class="fas fa-skype"></i></td>
+              <td><a href="skype:surabhisnath">surabhisnath@hotmail.com</a></td>
             </tr>
             <tr>
               <td><i class="fas fa-at"></i></td>
