--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="fa/brain.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
@@ -99,7 +99,7 @@
               </td>
             </tr>
             <tr>
-              <td><i class="fas fa-skype"></i></td>
+              <td><i class="fa fa-skype"></i></td>
               <td><a href="skype:surabhisnath">surabhisnath@hotmail.com</a></td>
             </tr>
             <tr>
