--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="fa/brain.png">
+  <meta name="msapplication-TileImage" content="favicons/brain.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
