--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
               <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
-              <div class="panel-body"><img src="img/LeVAsa.png" class="img">
+              <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
               </div>
            </div>
         </div>
