--- a/research.html
+++ b/research.html
@@ -51,9 +51,9 @@
          background-color: #f6f7fb;
       }
 
-      #projects .panel:hover {
+      /* #projects .panel:hover {
          box-shadow: 3px 3px 10px lightgray;
-      }
+      } */
 
       .panel-title {
          font-weight: bold !important;
