--- a/research.html
+++ b/research.html
@@ -45,15 +45,17 @@
    <!-- Local styles -->
    <link rel="stylesheet" href="css/main.css">
 
+   <!--
+   Put this inside style for shadow on hover over project
+   #projects .panel:hover {
+         box-shadow: 3px 3px 10px lightgray;
+      }
+   -->
    <style>
 
       .panel-body {
          background-color: #f6f7fb;
       }
-
-      /* #projects .panel:hover {
-         box-shadow: 3px 3px 10px lightgray;
-      } */
 
       .panel-title {
          font-weight: bold !important;
