--- a/research.html
+++ b/research.html
@@ -104,6 +104,7 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
+               <div class="panel-footer" align="center"><i class="fa fa-github"></i></div>
                </div>
             </div>
          </div>
