--- a/research.html
+++ b/research.html
@@ -104,7 +104,8 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><i class="fa fa-github"></i></div>
+               <a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+               <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x"></i></a></i></div>
                </div>
             </div>
          </div>
