--- a/research.html
+++ b/research.html
@@ -93,6 +93,7 @@
               </div> -->
               <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
+              <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
               </div>
            </div>
         </div>
@@ -104,7 +105,7 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"></div>
                </div>
             </div>
          </div>
