--- a/research.html
+++ b/research.html
@@ -173,6 +173,7 @@
                -->
                <div class="panel-footer" align="center">Protein ligand scoring using convolutional neural networks</div>
                <div class="panel-body"><img src="img/proteinligand.png" class="img img-responsive img-thumbnail">
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Protein-Ligand-Scoring-using-CNN" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>                  
                </div>
             </div>
          </div>
@@ -186,6 +187,7 @@
                -->
                <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech</div>
                <div class="panel-body"><img src="img/ar.png" class="img img-responsive img-thumbnail">
+               <div class="panel-footer" align="center"></div>
                </div>
             </div>
          </div>
@@ -199,6 +201,7 @@
                -->
                <div class="panel-footer" align="center">Assessment of terrace gardens as modifiers of building microclimate</div>
                <div class="panel-body"><img src="img/terracegarden.png" class="img img-responsive img-thumbnail">
+               <div class="panel-footer" align="center"></div>
                </div>
                
             </div>
