--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </td>
             </tr>
             <tr>
-              <td><i class="fa fa-skype"></i></td>
+              <td><i class="fas fa-home"></i></td>
               <td><a href="skype:surabhisnath">surabhisnath@hotmail.com</a></td>
             </tr>
             <tr>
