--- a/research.html
+++ b/research.html
@@ -22,6 +22,7 @@
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="msapplication-TileImage" content="favicons/brain.png">
    <meta name="theme-color" content="#ffffff">
@@ -97,7 +98,7 @@
               </div> -->
               <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
-              <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>    </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fab fa-skype fa-2x" style="color:black"></i></a></div>
+              <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fab fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
               </div>
            </div>
         </div>
