--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/RL-Method-Decision-Making-Impairment" target="_blank"><i class="fa fa-github fa-2x" style="color:black"></i></a></i></div>
                </div>
             </div>
          </div>
@@ -123,7 +123,7 @@
                </div> -->
                <div class="panel-footer", align="center">Universal EEG encoder<br>for learning diverse<br>intelligent tasks</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Universal-EEG-Encoder" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Universal-EEG-Encoder" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8919317" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
@@ -136,7 +136,7 @@
                </div> -->
                <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering on EEG data</div>
                <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/BCI-Emotion-Detection" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/BCI-Emotion-Detection" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://dl.acm.org/doi/pdf/10.1145/3297001.3297040" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
