--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/RL-Method-Decision-Making-Impairment" target="_blank"><i class="fa fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/RL-Method-Decision-Making-Impairment" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
                </div>
             </div>
          </div>
@@ -163,7 +163,7 @@
                </div> -->
                <div class="panel-footer">Breast cancer detection in mammograms using deep neural networks</div>
                <div class="panel-body"><img src="img/bcd.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Breast-Cancer-Detection-Deep-Neural-Networks" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Breast-Cancer-Detection-Deep-Neural-Networks" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://www.researchgate.net/profile/Anvit_Mangal/publication/337674027_BREAST_CANCER_DETECTION_IN_MAMMOGRAMS_USING_DEEP_NEURAL_NETWORKS/links/5de4e467a6fdcc2837fd40b5/BREAST-CANCER-DETECTION-IN-MAMMOGRAMS-USING-DEEP-NEURAL-NETWORKS.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
@@ -192,7 +192,7 @@
                -->
                <div class="panel-footer" align="center">Assistive technology augmented reality handwritten text to speech</div>
                <div class="panel-body"><img src="img/ar.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Test_Text_to_Speech" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
                </div>
             </div>
          </div>
@@ -206,7 +206,7 @@
                -->
                <div class="panel-footer" align="center">Assessment of terrace gardens as modifiers of building microclimate</div>
                <div class="panel-body"><img src="img/terracegarden.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"></div>
+               <div class="panel-footer" align="center"><a href="https://drive.google.com/file/d/1Y1ErIvQgExvzyAkw8OfYzjtFRShKQSMC/view" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
