--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </li>
           -->
           <li>
-            B. Tech. in Computer Science and Engineering, 2020<br>
+            B. Tech. (Hons.) in Computer Science and Engineering with minor in Computational Biology, 2020<br>
             <span class="university"><em>IIIT Delhi</em></span>
           </li>
 
