--- a/research.html
+++ b/research.html
@@ -67,7 +67,9 @@
       }
       
       a:hover {
-         color: black;
+         text-decoration: underline;
+         text-decoration-style: dashed;
+         text-decoration-color: black;
       }
 
    </style>
