--- a/research.html
+++ b/research.html
@@ -65,11 +65,15 @@
       label {
          white-space: pre;
       }
+ 
+      a
+      {
+         border-bottom: solid 1px blue;
+         text-decoration: none;
+      }
       
       a:hover {
-         text-decoration: underline;
-         text-decoration-style: dashed;
-         text-decoration-color: black;
+         border-bottom-color: red;
       }
 
    </style>
