--- a/research.html
+++ b/research.html
@@ -65,15 +65,12 @@
       label {
          white-space: pre;
       }
- 
-      a
-      {
-         border-bottom: solid 1px blue;
-         text-decoration: none;
-      }
-      
+       
       a:hover {
-         border-bottom-color: red;
+         text-decoration: underline;
+         text-decoration-style: dashed;
+         text-decoration-color: black;
+         border-bottom-color: black;
       }
 
    </style>
