--- a/vitae.html
+++ b/vitae.html
@@ -44,6 +44,12 @@
 
    <!-- Local styles -->
    <link rel="stylesheet" href="css/main.css">
+   
+   <style>
+      iframe {
+         pointer-events: none;
+      }
+   </style>
 
 </head>
 
