--- a/vitae.html
+++ b/vitae.html
@@ -46,6 +46,9 @@
    <link rel="stylesheet" href="css/main.css">
    
    <style>
+      div {
+         overflow: scroll;
+      }
       iframe {
          pointer-events: none;
       }
@@ -70,7 +73,7 @@
 
             <p>Find my curriculum vitae below</p>
 
-            <iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe>
+            <div><iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe></div>
 
          </div>
       </div>
