--- a/vitae.html
+++ b/vitae.html
@@ -45,6 +45,7 @@
    <!-- Local styles -->
    <link rel="stylesheet" href="css/main.css">
    
+   <!--
    <style>
       div {
          overflow: scroll;
@@ -53,6 +54,7 @@
          pointer-events: none;
       }
    </style>
+   -->
 
 </head>
 
@@ -73,7 +75,7 @@
 
             <p>Find my curriculum vitae below</p>
 
-            <div><iframe width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'  src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe></div>
+            <iframe width='100%' height='900px' frameborder='0' scrolling='yes'  src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe>
 
          </div>
       </div>
