--- a/vitae.html
+++ b/vitae.html
@@ -75,7 +75,7 @@
 
             <p>Find my curriculum vitae below</p>
 
-            <iframe width='100%' height='900px' frameborder='0' scrolling='yes'  src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe>
+            <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item' src="https://drive.google.com/file/d/1Pfr6JjB8DH9b8afVwuF1-fG_Fh1maK1B/preview"></iframe>
 
          </div>
       </div>
