--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
 
         <ul id="education">
           <!--
-          <li>
+          <li align="justify">
             Ph.D. in {FIELD}, {YEAR}<br>
             <span class="university"><em>University of Southern California</em></span>
           </li>
-          <li>
+          <li align="justify">
             M.S. in {FIELD}, {YEAR}<br>
             <span class="university"><em>{UNIVERSITY}</em></span>
           </li>
           -->
-          <li>
-            B. Tech. (Hons.) in Computer Science and Engineering<br>with minor in Computational Biology, 2020<br>
+          <li align="justify">
+            B. Tech. (Hons.) in Computer Science and Engineering with minor in Computational Biology, 2020<br>
             <span class="university"><em>IIIT Delhi</em></span>
           </li>
 
