--- a/research.html
+++ b/research.html
@@ -63,10 +63,6 @@
          font-weight: bold !important;
       }
       
-      div {
-         padding: 0px
-      }
-      
       label {
          white-space: pre;
       }
@@ -101,7 +97,7 @@
 
       </div>
 
-      <div class="row push-down-4" id="projects">
+      <div class="row" id="projects">
 
         <div class="col-sm-6 col-md-4">
            <div class="panel panel-default">
